--- a/affichage/sections/input-areas/forms.html
+++ b/affichage/sections/input-areas/forms.html
@@ -33,6 +33,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
   <link id="pagestyle" href="../../assets/css/material-kit.css?v=3.0.0" rel="stylesheet" />
+  <link href="../../assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body class="forms-sections">
@@ -42,8 +43,8 @@
     <div class="row">
       <section>
         <div class="container py-4">
-          <div class="row">
-            <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
+          <div class="row" >
+            <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column"id="sign_up">
               <h3 class="text-center">Sign up</h3>
               <form role="form" id="contact-form" method="post" autocomplete="off">
                 <div class="card-body">
