--- a/affichage/sections/input-areas/inscription.html
+++ b/affichage/sections/input-areas/inscription.html
@@ -72,11 +72,10 @@
                     <div class="col-md-6 ps-2">
                       <label >Genre</label>
                       <div class="dropdown">
-                        <select class="btn dropdown-toggle"  type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                         Genre
-                          <option class="dropdown-item" value="">Homme</option>
-                          <option class="dropdown-item"value="">Femme</option>
-                        </select>
+                        <select class="form-control" name="choices-button" id="choices-button" placeholder="Departure" name="genre">
+                          <option >Homme</option>
+                          <option >Femme</option>
+                        </select>                        
                       </div>
                     </div>
                   </div>
