--- a/affichage/sections/input-areas/connection.html
+++ b/affichage/sections/input-areas/connection.html
@@ -70,7 +70,7 @@
                         <a>Log as <span id="admin">administrator</span></a>
                     </div>
                     <div id="log_admin">
-                        <a><span id="sign">Sign up</span></a>
+                        <a>Don't have an account ? <span id="sign">Sign up</span></a>
                     </div>
                   </div>
                 </div>
