--- a/affichage/pages/sign-in.html
+++ b/affichage/pages/sign-in.html
@@ -53,7 +53,7 @@
           <ul class="navbar-nav navbar-nav-hover ms-auto">
             <li class="nav-item dropdown dropdown-hover mx-2 ms-lg-6">
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages8" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="material-icons opacity-6 me-2 text-md"></i>
+                <i class="material-icons opacity-6 me-2 text-md">dashboard</i>
                 Profil
                 <img src="../assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
                 <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
@@ -85,7 +85,7 @@
             </li>
             <li class="nav-item dropdown dropdown-hover mx-2 ms-lg-6">
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages8" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="material-icons opacity-6 me-2 text-md"></i>
+                <i class="material-icons opacity-6 me-2 text-md">view_day</i>
                Régime
                 <img src="../assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
                 <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
@@ -111,7 +111,7 @@
             </li>
             <li class="nav-item dropdown dropdown-hover mx-2 ms-lg-6">
               <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages8" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="material-icons opacity-6 me-2 text-md"></i>
+                <i class="material-icons opacity-6 me-2 text-md">article</i>
                Caisse
                 <img src="../assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-2 d-lg-block d-none">
                 <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-2 d-lg-none d-block">
