--- a/affichage/pages/modifier_profil.html
+++ b/affichage/pages/modifier_profil.html
@@ -157,6 +157,9 @@
     <section class="py-sm-7 py-5 position-relative">
             <div class="container py-4">
               <div class="row" >
+                <div class="mt-n8 mt-md-n9 text-center">
+              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="../assets/img/user.png" alt="bruce" loading="lazy">
+            </div>
                 <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column"id="sign_up">
                   <h3 class="text-center">Modifier votre profil</h3>
                   <form role="form" id="contact-form" method="post" autocomplete="off">
@@ -233,17 +236,6 @@
     <!-- START Blogs w/ 4 cards w/ image & text & link -->
     <!-- END Blogs w/ 4 cards w/ image & text & link -->
   </div>
-  <!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
-  <footer class="footer pt-5 mt-5">
-      <div class="container">
-          <div class="text-center">
-            <p class="text-dark my-4 text-sm font-weight-normal">
-               Copyright © <script>document.write(new Date().getFullYear())</script></a><br>
-            </p>
-          </div>
-      </div>
-  </footer>
-  <!-- -------- END FOOTER 5 w/ DARK BACKGROUND ------- -->
   <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
